# promptum

./: .coveragerc  .gitignore  Justfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml  typecheck.yml
src/llm_benchmark/core/: retry.py
src/llm_benchmark/providers/: openrouter.py
src/llm_benchmark/serialization/: __init__.py  json.py  protocol.py  report_template.html  yaml.py
src/llm_benchmark/validation/: validators.py
src/promptum/: __init__.py
src/promptum/benchmark/: __init__.py  benchmark.py  report.py
src/promptum/core/: __init__.py  metrics.py  result.py  test_case.py
src/promptum/execution/: __init__.py  runner.py
src/promptum/providers/: __init__.py  openrouter.py  protocol.py
src/promptum/serialization/: __init__.py  base.py  html.py  json.py  protocol.py  yaml.py
src/promptum/session/: __init__.py  case.py  report.py  result.py  runner.py  session.py  summary.py
src/promptum/storage/: __init__.py  file.py  protocol.py
src/promptum/validation/: __init__.py  protocol.py
tests/: conftest.py
tests/benchmark/: conftest.py  test_report_filtering.py  test_report_summary.py  test_test_case.py
tests/core/: conftest.py  test_metrics.py  test_retry.py  test_test_case.py
tests/providers/: test_openrouter.py
tests/session/: test_report.py
tests/validation/: conftest.py  test_contains.py  test_exact_match.py  test_json_schema.py  test_regex.py
