[project]
name = "promptum"
version = "0.0.7"
description = "Async LLM benchmarking library with protocol-based extensibility"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "deyna256", email = "literallybugcreator@gmail.com" }
]
keywords = ["llm", "benchmarking", "async", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/deyna256/promptum"
Repository = "https://github.com/deyna256/promptum"
Issues = "https://github.com/deyna256/promptum/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
